[*] fix various warnings, prefer uint64_t over ull, better unreachable
- Fixed a bunch of random warnings. There's still a bunch left but
whatever.
- Always prefer uint64_t over unsigned long long. They're the same
  thing, but one is shorter
- Made a platform-agnostic UNREACHABLE() macro so that this can compile
  on MSVC in the future maybe. Also used this macro to mark some
  unenumerated switch/if-paths as unreachable which should result in
  marginally better codegen.

Signed-off-by: crueter <crueter@eden-emu.dev>

--- a/source/framework/CMakeLists.txt
+++ b/source/framework/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Adding an interface library to propagate include directories
-add_library(framework exceptions.cpp profiler.cpp)
+add_library(framework exceptions.cpp profiler.cpp
+    unreachable.h)
 target_include_directories(framework INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)
 
 target_link_libraries(framework PUBLIC fmt::fmt)
